# file-curator

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/api/: .coverage  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_review_decisions.py  0003_scan_content_hash.py  0004_junk_scan_signals.py  0005_scheduled_workflow_previews.py  0006_junk_rule_pack_versions.py  0007_name_cleanup_pack_versions.py
apps/api/src/file_curator/: __init__.py  __main__.py  cli.py  config.py  db.py  filesystem.py  junk_rules.py  main.py  name_cleanup.py  processors.py  schemas.py  services.py  workers.py  workflow_capabilities.py  workflow_diagnostics.py  workflow_engine.py  workflow_templates.py
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: file-curator.spec.ts
apps/web/src/: api.test.ts  api.ts  i18n.ts  main.tsx  overrides.css  styles.css  types.ts
deploy/synology/: .env.example  compose.yaml
docs/: architecture.md  deployment.md  junk-rules.md  synology.md  workflow-v2.md
scripts/: export_openapi.py
tests/backend/: conftest.py  test_api_flow.py  test_auth.py  test_cli.py  test_filesystem.py  test_junk_rules.py  test_name_cleanup.py  test_performance.py  test_processors.py  test_recovery.py  test_scheduled_preview.py  test_workflow_v2.py
tests/e2e/: README.md
(+13 files in other folders)
