[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "file-curator-api"
version = "1.0.0"
description = "Deterministic local file curation service"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.6,<3",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "hypothesis>=6.115,<7",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]

[project.scripts]
file-curator = "file_curator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/file_curator"]

[tool.pytest.ini_options]
testpaths = ["../../tests/backend"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/file_curator/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
